test/expected/explain_rttdi.out
explain restrict Int p
        ^
9: error: built-in type can not be "restrict"
